--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="navwrap">
     <a href="index.html"><div class="nav-left">projects<br><hr class="active-projects"></div></a>
     <a href="about.html"><div class="nav-right">about</div></a>
-    <a href="about.html"><div class="title">Marcus Nystrand</div></a>
+    <div class="title">Marcus Nystrand</div>
   </div>
 
   <div class="mainwrap">
