--- a/save-the-dinos.html
+++ b/save-the-dinos.html
@@ -42,7 +42,7 @@
 Fierce meteorites hail down on Dino Land and the Dinos need to repopulate quickly before they all go down in history.
 
 Click meteorites to shoot them with your laser and click Dinos to make them dash in their opposite direction.
-<br><br>
+
 Made by me in 72 hours for the game jam Ludum Dare 46.
 
 <br><br>
@@ -53,7 +53,7 @@ https://marcusnystrand.itch.io/save-the-dinos
 </a>
 
 <div class="gallery verticalspacing">
-<img class="imggrid-fullwidth" src="img/cotg/cotg_poster.jpg">
+<img class="imggrid-fullwidth" src="img/save-the-dinos/unity-screenshot.jpg">
 </div>
 
 “It took me a while to realize I can click the dinosaurs to change their direction, which changed everything. I kept them all near the side of the screen, but eventually one single fast big asteroid wiped them all up.”
