--- a/save-the-dinos.html
+++ b/save-the-dinos.html
@@ -47,10 +47,8 @@ Made by me in 72 hours for the game jam Ludum Dare 46.
 
 <br><br>
 
-Play the game here: 
-<a href="https://marcusnystrand.itch.io/save-the-dinos" target="_blank">
-  <u>https://marcusnystrand.itch.io/save-the-dinos</u>
-</a>
+      Play the game <a href="https://marcusnystrand.itch.io/save-the-dinos" target="_blank">here</a></u>!
+
 
 <div class="gallery verticalspacing">
 <img class="imggrid-fullwidth" src="img/save-the-dinos/unity-screenshot.jpg">
