--- a/save-the-dinos.html
+++ b/save-the-dinos.html
@@ -54,15 +54,7 @@ Made by me in 72 hours for the game jam Ludum Dare 46.
 <img class="imggrid-fullwidth" src="img/save-the-dinos/unity-screenshot.jpg">
 </div>
 
-“It took me a while to realize I can click the dinosaurs to change their direction, which changed everything. I kept them all near the side of the screen, but eventually one single fast big asteroid wiped them all up.”
-<div><div>
-BoltKey (@boltkey)
-<div><div><div>
-
-“Really unforgiving, but pretty fun”
-<div><div>
-bassguitarbill (@bassguitarbill)
-<div><div><div>
+Made in Unity.
 
   </div>
 
