--- a/save-the-dinos.html
+++ b/save-the-dinos.html
@@ -54,7 +54,7 @@ Made by me in 72 hours for the game jam Ludum Dare 46.
 <img class="imggrid-fullwidth" src="img/save-the-dinos/unity-screenshot.jpg">
 </div>
 
-Made in Unity.
+Made in Unity game engine.
 
   </div>
 
